--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,32 +8,49 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>21 Savage</h1>
-  <h2>Why you trappin so hard?</h2>
+  <h1>Networking Contacts</h1>
+  <h2>It's not what you know. It's who you know.</h2>
 
-
-  <h3>Messages</h3>
-  <ul class="messages">
-  <% for(var i=0; i<messages.length; i++) {%>
-    <li class="message">
-      <span><%= messages[i].name %></span>
-      <span><%= messages[i].msg %></span>
-      <span><%= messages[i].thumbUp %></span>
-      <span><i class="fa fa-thumbs-up" aria-hidden="true"></i></span>
-      <span><i class="fa fa-thumbs-down" aria-hidden="true"></i></span>
-      <span><i class="fa fa-trash" aria-hidden="true"></i></span>
-    </li>
+  <h2>Add a contact</h2>
+  <form action="/contacts" method="POST">
+    <input type="text" placeholder="Name" name="name">
+    <input type="email" placeholder="Email" name="email">
+    <input type="text" placeholder="Company" name="company">
+    <input type="text" placeholder="Role" name="role">
+    <input type="text" placeholder="Comments" name="comments">
+    <button type="submit">Submit</button>
+  </form>
+  
+  <ul>
+  <% for(var i=0; i<contacts.length; i++) {%>
+      <li data-contact-id="<%= contacts[i]._id %>">
+        <form>
+          <span class="name"><%= contacts[i].name %></span>
+          <input class="nameInput newName" type="text" value="<%= contacts[i].name %>">
+          <span class="email"><%= contacts[i].email %></span>
+          <input class="newEmail" type="text" value="<%= contacts[i].email %>">
+          <span class="company"><%= contacts[i].company %></span>
+          <input class="newCompany" type="text" value="<%= contacts[i].company %>">
+          <span class="role"><%= contacts[i].role %></span>
+          <input class="newRole" type="text" value="<%= contacts[i].role %>">
+          <span class="comments"><%= contacts[i].comments %></span>
+          <input class="newComments" type="text" value="<%= contacts[i].comments %>">
+          <span class="count"><%= contacts[i].emailed %></span>
+          <span class="buttons"><i class="fa-solid fa-envelope" aria-hidden="true"></i></span>
+          <span class="count"><%= contacts[i].coffeeChat %></span>
+          <span class="buttons"><i class="fa-solid fa-mug-hot" aria-hidden="true"></i></span>
+          <span class="edit"><i class="fa-solid fa-pen-to-square"></i></span>
+          <span class="delete"><i class="fa fa-trash" aria-hidden="true"></i></span>
+          <button class="nameInput"> Submit </button>
+        </form>
+      </li>
   <% } %>
   </ul>
 
-  <h2>Add a message</h2>
+  
 
-  <form action="/messages" method="POST">
-    <input type="text" placeholder="name" name="name">
-    <input type="text" placeholder="message" name="msg">
-    <button type="submit">Submit</button>
-  </form>
-
+  
+  <script src="https://kit.fontawesome.com/27754e0c49.js" crossorigin="anonymous"></script>
   <script src="main.js"></script>
 
 </body>
